[DUOS-2028][risk=no] Implement GET (/translate/paragraph) for Data Use Ontology recommendations in Consent Ontology (#671)
* DUOS-2028 feat: added paragraph translations for recommended DUO terms

* DUOS-2028 feat: added paragraph translations for recommended DUO terms

* Minor improvement

Co-authored-by: Phil Shapiro <pshapiro@broadinstitute.org>

* chore: optimized code

* chore: switched /translate/paragraph endpoint from get to post

* chore: inline json

* wip: gcstore added with greg

* chore: fixed tests with Greg and refactored the code to clean up

* Update src/main/resources/assets/api-docs.yaml

Co-authored-by: Gregory Rushton <rushtong@users.noreply.github.com>

* chore: cleaned up a few things
chore: added new test case and format

* log/move exception handling around a bit.

* unused

* more cleanup

* resource method refactoring + tests

* method re-ordering

* formatting

* hashmap -> map; exception -> ioexception

* pr feedback

* logging

* collections -> list

* pr feedback

* chore: merged methods

Co-authored-by: Phil Shapiro <pshapiro@broadinstitute.org>
Co-authored-by: Gregory Rushton <rushtong@users.noreply.github.com>
Co-authored-by: Greg Rushton <grushton@broadinstitute.org>