@@ -1,24 +1,31 @@
 package org.broadinstitute.dsde.consent.ontology.datause.services;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.when;
 import static org.mockito.MockitoAnnotations.openMocks;
 
+import com.google.api.client.http.HttpResponse;
+import com.google.common.io.Resources;
 import com.google.gson.Gson;
 import java.io.IOException;
-import java.util.Collections;
+import java.net.URL;
+import java.nio.charset.Charset;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Stream;
 import org.broadinstitute.dsde.consent.ontology.AbstractTest;
 import org.broadinstitute.dsde.consent.ontology.Utils;
+import org.broadinstitute.dsde.consent.ontology.cloudstore.GCSStore;
 import org.broadinstitute.dsde.consent.ontology.model.DataUse;
 import org.broadinstitute.dsde.consent.ontology.model.DataUseBuilder;
 import org.broadinstitute.dsde.consent.ontology.model.DataUseSummary;
+import org.broadinstitute.dsde.consent.ontology.model.Recommendation;
 import org.broadinstitute.dsde.consent.ontology.model.TermResource;
 import org.broadinstitute.dsde.consent.ontology.service.AutocompleteService;
-import org.junit.After;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
@@ -34,26 +41,20 @@ public class TextTranslationServiceImplTest extends AbstractTest {
     @Mock
     private AutocompleteService autocompleteService;
 
-    public TextTranslationServiceImplTest() {
-    }
+    @Mock
+    private GCSStore gcsStore;
+
+    public TextTranslationServiceImplTest() {}
 
     @BeforeEach
-    public void setUpClass() throws IOException {
-        TermResource mockTerm = new TermResource();
-        mockTerm.setId("term id");
-        mockTerm.setLabel("term label");
-        mockTerm.setDefinition("term definition");
-        openMocks(this);
-        Mockito.when(autocompleteService.lookupById(any())).thenReturn(Collections.singletonList(mockTerm));
-        service = new TextTranslationServiceImpl(autocompleteService);
-    }
-
-    @After
-    public void tearDownClass() {
+    public void setUpClass() {
+      openMocks(this);
+      service = new TextTranslationServiceImpl(autocompleteService, gcsStore);
     }
 
     @Test
-    public void testTranslateSummary() {
+    public void testTranslateSummary() throws Exception {
+        initializeTerm();
         Gson gson = new Gson();
         DataUse dataUse = new DataUseBuilder().setGeneralUse(true).build();
         String dataUseString = gson.toJson(dataUse);
@@ -67,9 +68,10 @@ public class TextTranslationServiceImplTest extends AbstractTest {
     }
 
     @Test
-    public void testDiseaseLookup() throws IOException {
+    public void testDiseaseLookup() throws Exception {
+        initializeTerm();
         Gson gson = new Gson();
-        DataUse dataset = new DataUseBuilder().setDiseaseRestrictions(Collections.singletonList("term id")).build();
+        DataUse dataset = new DataUseBuilder().setDiseaseRestrictions(List.of("term id")).build();
         String datasetString = gson.toJson(dataset);
         String translation = service.translateDataset(datasetString);
         log.info(translation);
@@ -79,7 +81,8 @@ public class TextTranslationServiceImplTest extends AbstractTest {
     }
 
     @Test
-    public void testTranslateDataset() throws IOException {
+    public void testTranslateDataset() throws Exception {
+        initializeTerm();
         Gson gson = new Gson();
         DataUse dataset = new DataUseBuilder().setGeneralUse(true).build();
         String datasetString = gson.toJson(dataset);
@@ -88,6 +91,48 @@ public class TextTranslationServiceImplTest extends AbstractTest {
         assertNotNull(translation);
         assertTrue(translation.contains("[GRU]"));
     }
+
+    @Test
+    public void testTranslateParagraphNormal() throws Exception {
+      // Given
+      HttpResponse response = loadTermItemsResponse();
+      when(gcsStore.getStorageDocument(Mockito.anyString())).thenReturn(response);
+
+      // When
+      String mockParagraph = "GRU General research for some test with disease. This is not for profit.";
+      Map<String, Recommendation> translationNormal = service.translateParagraph(mockParagraph);
+
+      String gruTitle = getTitle(translationNormal, "http://purl.obolibrary.org/obo/DUO_0000042");
+      String dsTitle = getTitle(translationNormal, "http://purl.obolibrary.org/obo/DUO_0000007");
+      String npuTitle = getTitle(translationNormal, "http://purl.obolibrary.org/obo/DUO_0000045");
+
+      // Then
+      assertEquals(3, translationNormal.size());
+      assertEquals("General Research Use", gruTitle);
+      assertEquals("Disease Specific Research", dsTitle);
+      assertEquals("Not for Profit Organization Use Only", npuTitle);
+    }
+
+  @Test
+  public void testTranslateParagraphMixed() throws Exception {
+    // Given
+    HttpResponse response = loadTermItemsResponse();
+    when(gcsStore.getStorageDocument(Mockito.anyString())).thenReturn(response);
+
+    // When
+    String mockParagraph = "GrU geNEraL ResEArCh fOr some tesT wiTH DiseaSE. ThiS IS noT fOr pROFIT.";
+    Map<String, Recommendation> translation = service.translateParagraph(mockParagraph);
+
+    String gruTitle = getTitle(translation, "http://purl.obolibrary.org/obo/DUO_0000042");
+    String dsTitle = getTitle(translation, "http://purl.obolibrary.org/obo/DUO_0000007");
+    String npuTitle = getTitle(translation, "http://purl.obolibrary.org/obo/DUO_0000045");
+
+    // Then
+    assertEquals(3, translation.size());
+    assertEquals("General Research Use", gruTitle);
+    assertEquals("Disease Specific Research", dsTitle);
+    assertEquals("Not for Profit Organization Use Only", npuTitle);
+  }
 
     @Test
     public void testTranslatePurpose() throws IOException {
@@ -106,13 +151,13 @@ public class TextTranslationServiceImplTest extends AbstractTest {
         DataUse dataset = new DataUseBuilder()
                 .setGeneralUse(true)
                 .setHmbResearch(true)
-                .setDiseaseRestrictions(Collections.singletonList("disease"))
+                .setDiseaseRestrictions(List.of("disease"))
                 .setMethodsResearch(true)
                 .setControlSetOption("Yes")
                 .setCommercialUse(true)
                 .setGender("Male")
                 .setPediatric(true)
-                .setPopulationRestrictions(Collections.singletonList("population"))
+                .setPopulationRestrictions(List.of("population"))
                 .setAddiction(true)
                 .setAggregateResearch("Yes")
                 .setCloudStorage("Yes")
@@ -142,18 +187,19 @@ public class TextTranslationServiceImplTest extends AbstractTest {
     }
 
     @Test
-    public void testTranslateCoverageFalse() throws IOException {
+    public void testTranslateCoverageFalse() throws Exception {
+        initializeTerm();
         Gson gson = new Gson();
         DataUse dataset = new DataUseBuilder()
                 .setGeneralUse(false)
                 .setHmbResearch(false)
-                .setDiseaseRestrictions(Collections.singletonList("disease"))
+                .setDiseaseRestrictions(List.of("disease"))
                 .setMethodsResearch(false)
                 .setControlSetOption("No")
                 .setCommercialUse(false)
                 .setGender("Male")
                 .setPediatric(false)
-                .setPopulationRestrictions(Collections.singletonList("population"))
+                .setPopulationRestrictions(List.of("population"))
                 .setAddiction(false)
                 .setAggregateResearch("No")
                 .setCloudStorage("No")
@@ -194,6 +240,25 @@ public class TextTranslationServiceImplTest extends AbstractTest {
         log.info(translation);
         assertNotNull(translation);
         assertTrue(translation.contains("[GRU]"));
+    }
+
+  /** Helper Methods **/
+
+  private void initializeTerm() throws Exception {
+      TermResource mockTerm = new TermResource();
+      mockTerm.setId("term id");
+      mockTerm.setLabel("term label");
+      mockTerm.setDefinition("term definition");
+      when(autocompleteService.lookupById(any())).thenReturn(List.of(mockTerm));
+    }
+
+    private HttpResponse loadTermItemsResponse() throws IOException {
+      URL searchTerm = Resources.getResource("search-terms.json");
+      return getMockHttpResponse(Resources.toString(searchTerm, Charset.defaultCharset()));
+    }
+
+    private String getTitle(Map<String, Recommendation> translation, String urlKey) {
+      return translation.get(urlKey).title();
     }
 
 }
